MIC-32: Implementation of bulk api
